--- a/TychoClient/TychoClient/TychoClient/App.xaml
+++ b/TychoClient/TychoClient/TychoClient/App.xaml
@@ -15,9 +15,11 @@
 
 
             <!--Global Styles-->
-            <Color x:Key="NavigationPrimary">Orange</Color>
+            <!--<Color x:Key="NavigationPrimary">Orange</Color>-->
 
-
+            <Color x:Key="Color.ButtonPressed">#332b12</Color>
+            
+            
             <Style TargetType="{x:Type Label}">
                 <Setter Property="TextColor" Value="LightGoldenrodYellow"/>
                 <Setter Property="FontFamily" Value="Play-Regular.ttf#Play"/>
@@ -28,13 +30,34 @@
                 <Setter Property="TextColor" Value="LightGoldenrodYellow"/>
                 <Setter Property="FontFamily" Value="Play-Regular.ttf#Play"/>
                 <Setter Property="attached:Attached.HasShadow" Value="True"/>
+                <Setter Property="PlaceholderColor" Value="DarkGoldenrod"/>
             </Style>
             
             
 
             <Style TargetType="{x:Type Button}" x:Key="Style.Button.Implicit">
                 <Setter Property="FontFamily" Value="Play-Regular.ttf#Play"/>
-                <Setter Property="attached:Attached.HasShadow" Value="True"/>
+                <!--<Setter Property="attached:Attached.HasShadow" Value="True"/>-->
+                <Setter Property="CornerRadius" Value="15"/>
+                <Setter Property="BorderWidth" Value="2"/>
+                <Setter Property="BorderColor" Value="Orange"/>
+                <Setter Property="TextColor" Value="LightGoldenrodYellow"/>
+                <Setter Property="VisualStateManager.VisualStateGroups">
+                    <VisualStateGroupList x:Name="CommonStates">
+                        <VisualStateGroup >
+                            <VisualState x:Name="Normal">
+                                <VisualState.Setters>
+                                    <Setter Property="Button.BackgroundColor" Value="Black" />
+                                </VisualState.Setters>
+                            </VisualState>
+                            <VisualState x:Name="Pressed">
+                                <VisualState.Setters>
+                                    <Setter Property="Button.BackgroundColor" Value="{StaticResource Color.ButtonPressed}" />
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateGroupList>
+                </Setter>
             </Style>
 
             <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Style.Button.Implicit}"/>
@@ -45,7 +68,7 @@
                 <Setter Property="ControlTemplate">
                     <Setter.Value>
                         <ControlTemplate>
-                            <Grid BackgroundColor="#111109"
+                            <Grid BackgroundColor="Black"
                         ColumnSpacing="0">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="50" />
@@ -55,7 +78,7 @@
                                     <RowDefinition Height="50" />
                                     <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
-                                <Button Text="&#x2630;" BackgroundColor="Transparent" FontSize="30" TextColor="Orange"
+                                <Button Text="&#x2630;" FontSize="30" TextColor="Orange"  BorderWidth="0" Margin="0,-5,0,0"
                                         attached:Attached.OpensMenu="True" />
                                 <Label Grid.Column="1" Text="{TemplateBinding Title}" TextColor="Orange" Margin="20,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" FontSize="Large" />
 
