--- a/TychoClient/TychoClient/TychoClient/Views/LoginPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/LoginPage.xaml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<controls:ContentPageWithPopup 
+             xmlns:controls="clr-namespace:TychoClient.Controls"  
+             xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TychoClient.Views.LoginPage"
              xmlns:vm="clr-namespace:TychoClient.ViewModels"
              Style="{StaticResource Style.ContentPage.Default}"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             CurrentPopup="{Binding CurrentPopup}">
     
     <ContentPage.BindingContext>
         <vm:LoginViewModel />
@@ -34,4 +37,4 @@
         <Button Text="Logout" Command="{Binding LoginCommand}" IsVisible="{Binding IsLoggedIn}"/>
 
     </StackLayout>
-</ContentPage>
+</controls:ContentPageWithPopup>
