--- a/TychoClient/TychoClient/TychoClient/Views/NewsPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/NewsPage.xaml
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<controls:ContentPageWithPopup 
+             xmlns:controls="clr-namespace:TychoClient.Controls"  
+             xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TychoClient.Views.NewsPage"
              xmlns:vm="clr-namespace:TychoClient.ViewModels"
+             xmlns:attached="clr-namespace:TychoClient.AttachedProperties" 
              Style="{StaticResource Style.ContentPage.Default}"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             CurrentPopup="{Binding CurrentPopup}">
     
     <ContentPage.BindingContext>
         <vm:NewsViewModel />
@@ -29,4 +33,4 @@
             
         </ScrollView>
     </Grid>
-</ContentPage>
+</controls:ContentPageWithPopup>
