--- a/TychoClient/TychoClient/TychoClient/Views/TransactionPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/TransactionPage.xaml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<controls:ContentPageWithPopup 
+             xmlns:controls="clr-namespace:TychoClient.Controls"  
+             xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TychoClient.Views.TransactionPage"
              xmlns:vm="clr-namespace:TychoClient.ViewModels"
@@ -61,4 +63,4 @@
         </Entry>
 
     </Grid>
-</ContentPage>
+</controls:ContentPageWithPopup>
